# homeworks_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.windows.md  how_use_git.md
.github/workflows/: cmake.yml  homework_1_task_01.yml  homework_1_task_02.yml
homework_01/: CMakeLists.txt  calculate.cpp  calculate.h  split_string.cpp  split_string.h
homework_01/Noughts_and_Crosses.cpp/: NandCGame.cpp
homework_01/src/: main.cpp  split_string_test.cpp  utils.hpp
homework_01/task_01/: CMakeLists.txt
homework_01/task_01/src/: main  main.cpp  split_string_test.cpp  utils.cpp  utils.hpp
homework_01/task_02/: CMakeLists.txt
homework_01/task_02/src/: calculate_test.cpp  main  main.cpp  utils.cpp  utils.hpp
homework_01/task_03_tictactoe/: proga_tictactoe  proga_tictactoe.cpp  utils
homework_02/: CMakeLists.txt
homework_02/task_2_01/: CMakeLists.txt
homework_02/task_2_01/src/: main.cpp  test.cpp  utils.cpp  utils.hpp
